padding fix
make cards have more padding so text is less cramped

--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,7 @@ button{
     width: 25vw;
     height: fit-content;
     margin: 10px auto;
-    padding:15px;
+    padding:30px;
     border-radius: 25px;
     z-index: 999; 
     position: fixed; 
